# paytrust

./: .clippy.toml  .dockerignore  .env.docker  .gitignore  Cargo.toml  DEBUGGING-SUMMARY.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  TESTING.md  US2_IMPLEMENTATION_SUMMARY.md  clippy.toml  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: constitution-check.yml  test.yml
.serena/: project.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
config/: .env.example  .env.test.example
docs/: API.md  METRICS-COLLECTION-2025-11.md  PERFORMANCE-OPTIMIZATION-2025-11.md  SECURITY-AUDIT-2025-01.md  deployment.md  quickstart.md
docs/examples/: 01-basic-invoice-payment.md  02-taxes-and-service-fees.md  03-installment-payments.md  04-multi-currency-support.md  README.md
migrations/: 001_create_gateway_configs_table.sql  002_create_api_keys_table.sql  003_create_invoices_table.sql  004_create_line_items_table.sql  005_create_installment_schedules_table.sql  006_create_payment_transactions_table.sql  007_add_indexes.sql  008_create_webhook_retry_log.sql  009_create_api_key_audit_log.sql  20251101000001_create_payment_gateways_table.sql  20251101000002_create_api_keys_table.sql  20251101000003_create_invoices_table.sql  20251101000004_create_line_items_table.sql  20251101000005_create_installment_schedules_table.sql  20251101000006_create_payment_transactions_table.sql  20251101000007_add_indexes_and_constraints.sql  20251102000001_add_original_invoice_id.sql  20251102000003_add_external_id_to_invoices.sql
scripts/: seed_test_data.sh  seed_test_data.sql  setup_test_db.sh  test_coverage.sh  test_endpoints.sh  test_parallel.sh  test_with_docker.sh  validate-openapi.sh
specs/001-payment-orchestration-api/: IMPLEMENTATION-SUMMARY.md  RESEARCH-UPDATE-NOV-2025.md  cargo-dependencies.md  data-model.md  implementation-guide.md  implementation-roadmap.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-payment-orchestration-api/checklists/: requirements.md
specs/001-payment-orchestration-api/contracts/: openapi.yaml  rate_limiter_trait.rs
specs/002-real-endpoint-testing/: FINAL-REPORT.md  IMPLEMENTATION-SUMMARY.md  VALIDATION-CHECKLIST.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-real-endpoint-testing/checklists/: requirements.md
specs/002-real-endpoint-testing/contracts/: test-infrastructure-api.md
src/: lib.rs  main.rs
src/config/: database.rs  mod.rs  server.rs
src/core/: currency.rs  error.rs  mod.rs  timezone.rs
src/core/traits/: repository.rs  service.rs
src/middleware/: auth.rs  error_handler.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
src/modules/: mod.rs
src/modules/gateways/: mod.rs
src/modules/gateways/controllers/: gateway_controller.rs  mod.rs
src/modules/gateways/models/: gateway_config.rs  mod.rs
src/modules/gateways/repositories/: gateway_repository.rs  mod.rs
src/modules/gateways/services/: gateway_service.rs  gateway_trait.rs  midtrans.rs  mod.rs  xendit.rs
src/modules/health/: mod.rs
src/modules/health/controllers/: health_controller.rs  metrics.rs  mod.rs
src/modules/installments/: mod.rs
src/modules/installments/controllers/: installment_controller.rs  mod.rs
src/modules/installments/models/: installment_schedule.rs  mod.rs
src/modules/installments/repositories/: installment_repository.rs  mod.rs
src/modules/installments/services/: installment_calculator.rs  installment_service.rs  mod.rs
src/modules/invoices/: mod.rs
src/modules/invoices/controllers/: invoice_controller.rs  mod.rs
src/modules/invoices/models/: invoice.rs  line_item.rs  mod.rs
src/modules/invoices/repositories/: invoice_repository.rs  mod.rs
src/modules/invoices/services/: expiration_checker.rs  invoice_service.rs  mod.rs
src/modules/reports/: mod.rs
src/modules/reports/controllers/: mod.rs  report_controller.rs
src/modules/reports/models/: financial_report.rs  mod.rs
src/modules/reports/repositories/: mod.rs  report_repository.rs
src/modules/reports/services/: mod.rs  report_service.rs
src/modules/taxes/: mod.rs
src/modules/taxes/controllers/: mod.rs  tax_controller.rs
src/modules/taxes/models/: mod.rs  tax.rs
src/modules/taxes/repositories/: mod.rs  tax_repository.rs
src/modules/taxes/services/: mod.rs  tax_calculator.rs
src/modules/transactions/: mod.rs
src/modules/transactions/controllers/: mod.rs  transaction_controller.rs  webhook_controller.rs
src/modules/transactions/models/: mod.rs  payment_transaction.rs
src/modules/transactions/repositories/: mod.rs  transaction_repository.rs
src/modules/transactions/services/: mod.rs  transaction_service.rs  webhook_handler.rs
tests/contract/: installment_api_test.rs  invoice_api_test.rs  openapi_validation_test.rs  report_api_test.rs
tests/helpers/: assertions.rs  gateway_sandbox.rs  mod.rs  test_client.rs  test_data.rs  test_database.rs  test_server.rs
tests/integration/: database_setup.rs  expires_at_validation_test.rs  financial_report_integration_test.rs  gateway_currency_validation_test.rs  gateway_validation_test.rs  installment_adjustment_test.rs  installment_flow_test.rs  installment_invoice_test.rs  invoice_expiration_test.rs  metrics_collection_test.rs  metrics_example_test.rs  mod.rs  payment_flow_test.rs  payment_initiation_test.rs  rate_limit_test.rs  refund_webhook_test.rs  report_generation_test.rs  service_fee_integration_test.rs  service_fee_test.rs  tax_calculation_integration_test.rs  tax_calculation_test.rs  webhook_handling_test.rs  webhook_queue_capacity_test.rs
tests/performance/: invoice_creation_performance_test.rs  load_test.rs
tests/unit/: installment_calculator_test.rs  installment_overpayment_test.rs  invoice_calculation_test.rs  line_item_calculation_test.rs  service_fee_test.rs  tax_calculation_test.rs  tax_calculator_test.rs  tax_validation_test.rs  timezone_test.rs
