[package]
name = "paytrust"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"

[dependencies]
# HTTP Server
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["redis-session"] }
actix-identity = "0.8"
actix-governor = "0.5"

# Async Runtime
tokio = { version = "1.40", features = ["full", "parking_lot"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "migrate",
    "rust_decimal",
    "chrono",
    "uuid"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Financial Calculations
rust_decimal = { version = "1.36", features = [
    "serde",
    "serde-with-arbitrary-precision"
] }

# HTTP Client (Gateway Integration)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Configuration
dotenvy = "0.15"

# Rate Limiting
governor = "0.7"

# Security
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures-util = "0.3"

[dev-dependencies]
proptest = "1.5"
mockito = "1.5"
rust_decimal_macros = "1.36"

# Unit Tests (Property-based)
[[test]]
name = "tax_calculator_test"
path = "tests/unit/tax_calculator_test.rs"

[[test]]
name = "service_fee_test"
path = "tests/unit/service_fee_test.rs"

[[test]]
name = "tax_calculation_test"
path = "tests/unit/tax_calculation_test.rs"

[[test]]
name = "installment_calculator_test"
path = "tests/unit/installment_calculator_test.rs"

[[test]]
name = "installment_overpayment_test"
path = "tests/unit/installment_overpayment_test.rs"

# Contract Tests
[[test]]
name = "invoice_api_test"
path = "tests/contract/invoice_api_test.rs"

[[test]]
name = "installment_api_test"
path = "tests/contract/installment_api_test.rs"

[[test]]
name = "openapi_validation_test"
path = "tests/contract/openapi_validation_test.rs"

# Integration Tests
[[test]]
name = "payment_flow_test"
path = "tests/integration/payment_flow_test.rs"

[[test]]
name = "gateway_validation_test"
path = "tests/integration/gateway_validation_test.rs"

[[test]]
name = "installment_flow_test"
path = "tests/integration/installment_flow_test.rs"

[[test]]
name = "installment_adjustment_test"
path = "tests/integration/installment_adjustment_test.rs"

[[test]]
name = "invoice_expiration_test"
path = "tests/integration/invoice_expiration_test.rs"

# Contract Tests - Phase 4
[[test]]
name = "report_api_test"
path = "tests/contract/report_api_test.rs"

# Integration Tests - Phase 4
[[test]]
name = "tax_locking_test"
path = "tests/integration/tax_calculation_test.rs"

[[test]]
name = "gateway_fee_test"
path = "tests/integration/service_fee_test.rs"

[[test]]
name = "report_generation_test"
path = "tests/integration/report_generation_test.rs"

# Performance tests
[[test]]
name = "invoice_creation_performance_test"
path = "tests/performance/invoice_creation_performance_test.rs"

# Metrics tests
[[test]]
name = "metrics_collection_test"
path = "tests/integration/metrics_collection_test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
