[package]
name = "paytrust"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"

[dependencies]
# HTTP Server
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["redis-session"] }
actix-identity = "0.8"
actix-governor = "0.5"

# Async Runtime
tokio = { version = "1.40", features = ["full", "parking_lot"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "migrate",
    "rust_decimal",
    "chrono",
    "uuid"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Financial Calculations
rust_decimal = { version = "1.36", features = [
    "serde",
    "serde-with-arbitrary-precision"
] }

# HTTP Client (Gateway Integration)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Configuration
dotenvy = "0.15"

# Rate Limiting
governor = "0.7"

# Security
argon2 = "0.5"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.5"
rust_decimal_macros = "1.36"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
